# pyplater

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  LICENSE  README.md  README.rst  TODO.md  bootstrap.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  python-publish.yml
beam/: __init__.py  tag.py  utils.py
htmlpy/: __init__.py  tag.py  utils.py
pyplater/: __init__.py  element.py  tag.py  tags.py  utils.py
templater/: __init__.py  tag.py  utils.py
tests/: test_main.py  test_tag.py  test_utils.py
tests/test_component/: test_bootstrap.py
