[tool.poetry]
name = "pyplater"
version = "2.1.3-beta"
readme = "README.rst"
description = "Build html component with python"
authors = ["Unviray <unviray@gmail.com>"]
homepage = "https://github.com/Unviray/pyplater"
repository = "https://github.com/Unviray/pyplater"
license = "MIT"
keywords = ["html", "component", "react", "angular", "vue"]
packages = [
    { include = "pyplater" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coveralls = "^3.0.1"
flake8 = "^3.9.0"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.4.0"
flake8-debugger = "^4.0.0"
flake8-isort = "^4.0.0"
icecream = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
